:see_no_evil: :: Tuist 관련 ignore 추가

--- a/.gitignore
+++ b/.gitignore
@@ -235,4 +235,6 @@ xcuserdata
 !*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
 
-# End of https://www.toptal.com/developers/gitignore/api/xcode,swift,objective-c,macos,swiftpackagemanager,swiftpm,cocoapods,git,fastlane,homebrew
+### Tuist ###
+Tuist/Dependencies
+Derived/
